<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:textStyle="bold"
        android:text="Loan Payment Calculator"
        android:textSize="25dp" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:textStyle="bold"
        android:inputType="number"
        android:layout_marginLeft="30dp"
        android:text="@string/LoanAmount_"
        android:textSize="20dp"/>

    <EditText
        android:id="@+id/amount_loan"
        android:layout_width="match_parent"
        android:layout_marginRight="10dp"
        android:inputType="number"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_marginLeft="170dp"
        android:layout_marginTop="140dp"
        android:hint="@string/EnterAmount"
        android:textSize="20dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:textStyle="bold"
        android:inputType="number"
        android:layout_marginLeft="30dp"
        android:text="@string/Interest_"
        android:textSize="20dp"/>

    <EditText
        android:id="@+id/interest_loan"
        android:layout_width="match_parent"
        android:layout_marginRight="10dp"
        android:inputType="number"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_marginLeft="190dp"
        android:layout_marginTop="190dp"
        android:hint="@string/EnterInterest"
        android:textSize="20dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="250dp"
        android:textStyle="bold"
        android:inputType="number"
        android:layout_marginLeft="50dp"
        android:text="@string/Months_"
        android:textSize="20dp"/>

    <EditText
        android:id="@+id/months_loan"
        android:layout_width="match_parent"
        android:layout_marginRight="10dp"
        android:inputType="number"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_marginLeft="160dp"
        android:layout_marginTop="240dp"
        android:hint="@string/EnterMonths"
        android:textSize="20dp" />

    <Button
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:onClick="calculateLoan"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="310dp"
        android:textColor="@color/colorPrimary"

        android:background="@android:color/transparent"
        android:textStyle="bold"
        android:text="@string/CalculateLoanAmount" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="380dp"
        android:textStyle="bold"
        android:inputType="number"
        android:layout_marginLeft="20dp"
        android:text="@string/MonthlyPayment_"
        android:textSize="20dp"/>

    <TextView
        android:id="@+id/monthly_loan"
        android:layout_width="match_parent"
        android:layout_marginRight="10dp"
        android:inputType="number"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_marginLeft="200dp"
        android:layout_marginTop="380dp"
        android:hint=""
        android:textSize="20dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="430dp"
        android:textStyle="bold"
        android:inputType="number"
        android:layout_marginLeft="20dp"
        android:text="@string/TotalPayment_"
        android:textSize="20dp"/>

    <TextView
        android:id="@+id/total_loan"
        android:layout_width="match_parent"
        android:layout_marginRight="10dp"
        android:inputType="number"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_marginLeft="200dp"
        android:layout_marginTop="430dp"
        android:hint=""
        android:textSize="20dp" />

    <Button
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:onClick="directToUpdateLoanPage"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="500dp"
        android:textColor="@color/colorPrimary"

        android:background="@android:color/transparent"
        android:textStyle="bold"
        android:text="@string/UPDATELOAN" />

    <Button
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:onClick="directToApplyLoanPage"
        android:layout_marginLeft="200dp"
        android:layout_marginTop="500dp"
        android:textColor="@color/colorPrimary"

        android:background="@android:color/transparent"
        android:textStyle="bold"
        android:text="@string/APPLYLOAN" />

</RelativeLayout>