<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeActivity">

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="40dp"
        android:text="@string/transaction"
        android:textAlignment="center"
        android:textSize="25dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView_TMAcc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="60dp"
        android:textSize="20dp"
        android:text="@string/TM_attr1"
        app:layout_constraintEnd_toStartOf="@+id/editText_TMAcc"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <TextView
        android:id="@+id/textView_TMTAcc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="40dp"
        android:textSize="20dp"
        android:text="@string/TM_attr2"
        app:layout_constraintEnd_toStartOf="@+id/editText_TMTAcc"
        app:layout_constraintHorizontal_bias="0.317"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_TMAcc" />

    <TextView
        android:id="@+id/textView_TMDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="36dp"
        android:text="@string/TM_attr4"
        android:textSize="20dp"
        app:layout_constraintEnd_toStartOf="@+id/editText_TMAmount"
        app:layout_constraintHorizontal_bias="0.628"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_TMAmount" />

    <TextView
        android:id="@+id/textView_TMAmount"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="40dp"
        android:text="@string/TM_attr3"
        android:textSize="20dp"
        app:layout_constraintEnd_toStartOf="@+id/editText_TMDate"
        app:layout_constraintHorizontal_bias="0.717"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_TMTAcc" />

    <Button
        android:id="@+id/btn_submitTransact"
        android:layout_width="wrap_content"
        android:layout_height="52dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="92dp"
        android:layout_marginRight="92dp"
        android:layout_marginTop="8dp"
        android:background="@android:color/transparent"
        android:onClick="insertTransaction"
        android:text="@string/TM_btn1"
        android:textColor="@color/colorPrimary"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/amount_trans"
        app:layout_constraintVertical_bias="0.187" />

    <TextView
        android:id="@+id/accno_session_trans"
        android:layout_width="209dp"
        android:layout_height="26dp"
        android:ems="10"
        android:inputType="number"
        android:textSize="20dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView_TMAcc"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/taccno_trans"
        android:layout_width="194dp"
        android:layout_height="42dp"
        android:ems="10"
        android:inputType="number"
        android:textAlignment="center"
        android:textSize="20dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView_TMTAcc"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/amount_trans"
        android:layout_width="wrap_content"
        android:layout_height="46dp"
        android:ems="10"
        android:textAlignment="center"
        android:inputType="number"
        android:textSize="20dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView_TMDate"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/date_trans"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="date"
        android:textSize="20dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView_TMAmount"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:layout_marginBottom="28dp"
        android:layout_marginEnd="96dp"
        android:layout_marginRight="96dp"
        android:layout_marginTop="8dp"
        android:background="@android:color/transparent"
        android:onClick="directToEmployeeTransactionMode"
        android:text="Employee Mode"
        android:textColor="@color/colorPrimary"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/amount_trans"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="112dp"
        android:layout_marginEnd="64dp"
        android:layout_marginRight="64dp"
        android:background="@android:color/transparent"
        android:onClick="displayTransactionHistory"
        android:text="Transaction History"
        android:textColor="@color/colorPrimary"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
</android.support.constraint.ConstraintLayout>